need pixel size

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
             <input type="range" min ="" max = "" value = "" step="" class="range__opacity">opacity</input>
             <input type="range" min ="" max = "" value = "" step="" class="range__saturate">saturate</input>
             <input type="range" min ="" max = "" value = "" step="" class="range__sepia">sepia</input>
-            
-            
             <div class="btns">
                 <input class="btn_open" type="file" accept="image/*"></input>
                 <button class="btn_reset">reset</button>
@@ -34,7 +32,8 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="canvas.js"></script>
 </body>
 
 </html>
